--- a/package.json
+++ b/package.json
@@ -9,9 +9,49 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.0.0",
+    "@ckeditor/ckeditor5-build-classic": "^41.0.0",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
+    "@ckeditor/ckeditor5-watchdog": "^43.1.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-pdf/renderer": "^3.3.8",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.5.0",
+    "@types/react-gauge-chart": "^0.4.3",
+    "@types/react-speech-recognition": "^3.9.5",
+    "antd": "^5.12.8",
+    "axios": "^1.6.5",
+    "formik": "^2.4.5",
+    "framer-motion": "^10.16.4",
+    "gsap": "^3.12.5",
+    "js-cookie": "^3.0.5",
+    "libphonenumber-js": "^1.10.55",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
+    "next": "14.2.13",
+    "next-redux-wrapper": "^8.1.0",
+    "paystack": "^2.0.1",
     "react": "^18",
+    "react-confetti-explosion": "^2.1.2",
+    "react-date-picker": "^10.6.0",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "react-gauge-chart": "^0.5.1",
+    "react-google-charts": "^4.0.1",
+    "react-paystack": "^5.0.0",
+    "react-phone-number-input": "^3.2.23",
+    "react-redux": "^9.0.4",
+    "react-select": "^5.8.0",
+    "react-speech-recognition": "^3.10.0",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
+    "regenerator-runtime": "^0.14.1",
+    "sass": "^1.78.0",
+    "sharp": "^0.33.2",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "typescript": "^5",
