--- a/package.json
+++ b/package.json
@@ -17,19 +17,25 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@react-pdf/renderer": "^3.3.8",
+    "@reduxjs/toolkit": "^2.2.7",
     "@stripe/react-stripe-js": "^2.8.0",
     "@stripe/stripe-js": "^4.5.0",
     "@types/react-gauge-chart": "^0.4.3",
     "@types/react-speech-recognition": "^3.9.5",
     "antd": "^5.12.8",
     "axios": "^1.6.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.5",
     "js-cookie": "^3.0.5",
     "libphonenumber-js": "^1.10.55",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.447.0",
     "moment": "^2.30.1",
     "next": "14.2.13",
     "next-redux-wrapper": "^8.1.0",
@@ -42,25 +48,26 @@
     "react-google-charts": "^4.0.1",
     "react-paystack": "^5.0.0",
     "react-phone-number-input": "^3.2.23",
-    "react-redux": "^9.0.4",
+    "react-redux": "^9.1.2",
     "react-select": "^5.8.0",
     "react-speech-recognition": "^3.10.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.2",
     "regenerator-runtime": "^0.14.1",
     "sass": "^1.78.0",
     "sharp": "^0.33.2",
+    "tailwind-merge": "^2.5.3",
+    "tailwindcss-animate": "^1.0.7",
     "yup": "^1.3.3"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13"
+    "typescript": "^5"
   }
 }
