--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-redux": "^9.1.2",
     "react-select": "^5.8.0",
     "react-speech-recognition": "^3.10.0",
+    "react-spinners": "^0.14.1",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "regenerator-runtime": "^0.14.1",
