--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-pdf/renderer": "^3.3.8",
     "@reduxjs/toolkit": "^2.2.7",
@@ -29,6 +34,7 @@
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.5",
@@ -39,13 +45,16 @@
     "moment": "^2.30.1",
     "next": "14.2.13",
     "next-redux-wrapper": "^8.1.0",
+    "next-themes": "^0.3.0",
     "paystack": "^2.0.1",
     "react": "^18",
     "react-confetti-explosion": "^2.1.2",
     "react-date-picker": "^10.6.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-gauge-chart": "^0.5.1",
     "react-google-charts": "^4.0.1",
+    "react-hook-form": "^7.53.0",
     "react-paystack": "^5.0.0",
     "react-phone-number-input": "^3.2.23",
     "react-redux": "^9.1.2",
@@ -57,9 +66,11 @@
     "regenerator-runtime": "^0.14.1",
     "sass": "^1.78.0",
     "sharp": "^0.33.2",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
