--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.5",
+    "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
     "libphonenumber-js": "^1.10.55",
     "lodash": "^4.17.21",
