--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "next-themes": "^0.3.0",
     "paystack": "^2.0.1",
     "react": "^18",
+    "react-calendly": "^4.3.1",
     "react-confetti-explosion": "^2.1.2",
     "react-date-picker": "^10.6.0",
     "react-day-picker": "^8.10.1",
