--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+   
     "@ant-design/nextjs-registry": "^1.0.0",
     "@ckeditor/ckeditor5-build-classic": "^41.0.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
@@ -34,12 +35,15 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@stripe/react-stripe-js": "^2.8.0",
     "@stripe/stripe-js": "^4.5.0",
+    "@types/crypto-js": "^4.2.2",
+    "@types/mixpanel-browser": "^2.50.0",
     "@types/react-gauge-chart": "^0.4.3",
     "@types/react-speech-recognition": "^3.9.5",
     "antd": "^5.12.8",
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
@@ -50,6 +54,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.447.0",
     "moment": "^2.30.1",
+    "mixpanel-browser": "^2.55.1",
     "next": "14.2.13",
     "next-redux-wrapper": "^8.1.0",
     "next-themes": "^0.3.0",
