added mix panel variable

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,11 +7,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      # NEXT_PUBLIC_BASE_URL: ${{ business-secrets.NEXT_PUBLIC_BASE_URL }}
-      # NEXT_PUBLIC_STAGING_URL: ${{ business-secrets.NEXT_PUBLIC_STAGING_URL }}
-      # NEXT_PUBLIC_STRIPE_KEY: ${{ business-secrets.NEXT_PUBLIC_STRIPE_KEY }}
       NEXT_PUBLIC_MIX_PANEL: ${{ secrets.NEXT_PUBLIC_EMP_MIX_PANEL }}
     steps:
+      - name: Debug environment variables
+        run: |
+          echo "Checking if env variables are set (showing only presence, not values)"
+          env | grep NEXT_PUBLIC_ | cut -d= -f1
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
