--- a/amplify.yaml
+++ b/amplify.yaml
@@ -5,7 +5,7 @@ frontend:
       commands:
         - nvm install 20.11.0
         - nvm use 20.11.0
-        - npm i --legacy-peer-deps
+        - npm i --force
         - npm ci --legacy-peer-deps
     build:
       commands:
