maded changes to analaytics and added meta evetnts

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      NEXT_PUBLIC_MIX_PANEL: ${{ secrets.NEXT_PUBLIC_EMP_MIX_PANEL }}
+      NEXT_PUBLIC_EMP_MIX_PANEL: ${{ secrets.NEXT_PUBLIC_EMP_MIX_PANEL }}
       NEXT_PUBLIC_MIX: ${{ secrets.NEXT_PUBLIC_MIX_PANEL }}
     steps:
       - run: echo "NEXT_PUBLIC_MIX_PANEL=${NEXT_PUBLIC_EMP_MIX_PANEL}"
